# var_and_es_engine

./: .coverage  .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yaml
src/var_engine/: __init__.py  exceptions.py
src/var_engine/core/: identifiers.py  instruments.py  money.py  portfolio.py
tests/: test_core.py  test_sanity.py
